# imu-game-gesture-recgonition

./: .gitignore  README.md  collect_data.py  features.py  model.joblib  pyproject.toml  requirements.txt  run_live.py  train.py
data/archive/: gesture_data copy.csv
deploy/: imugesture-live.service
pc/: action_receiver.py  requirements.txt
scripts/: append_feature_columns.py  augment_csv.py  collect_data.py  normalize_take_ids.py  remove_first_left_rows.py  rename_take_ids.py  run_live.py  train.py
src/imugesture/: __init__.py  features.py  flex_reader.py  mpu_reader.py  paths.py  tuning_agent.py
tests/: test_tuning_agent.py
